--- a/railway.toml
+++ b/railway.toml
@@ -3,9 +3,8 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-numReplicas = 1
+startCommand = "python api_deploy.py"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-healthcheckPath = "/health"
-healthcheckTimeout = 100
