--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,9 @@
 [build]
-builder = "DOCKERFILE"
+builder = "dockerfile"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "python api_deploy.py"
+startCommand = "python api.py"
 healthcheckPath = "/health"
-healthcheckTimeout = 300
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+healthcheckTimeout = 100
+restartPolicyType = "on_failure"
