--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.0
-httpx==0.26.0
-playwright==1.40.0
-pubchempy==1.0.4
-python-multipart==0.0.6
+fastapi==0.115.0
+uvicorn==0.32.0
+httpx==0.27.2
+pydantic==2.10.0
