--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,6 @@ builder = "dockerfile"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "python api.py"
-healthcheckPath = "/health"
-healthcheckTimeout = 100
+startCommand = "uvicorn api:app --host 0.0.0.0 --port 8080"
 restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 3
