--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-httpx==0.27.2
-pydantic==2.9.2
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic==2.5.3
+httpx==0.26.0
+
+# Stealth crawlers
+playwright==1.41.0
+selenium==4.16.0
+
+# Utils
+python-dateutil==2.8.2
