--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-httpx==0.26.0
-
-# Stealth crawler
-playwright==1.41.0
-
-# Utils
-python-dateutil==2.8.2
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+playwright==1.40.0
+httpx==0.25.2
+pydantic==2.5.2
+python-multipart==0.0.6
